--- a/diabetes_pred/Project_3_Diabetes_Prediction.ipynb
+++ b/diabetes_pred/Project_3_Diabetes_Prediction.ipynb
@@ -57,7 +57,7 @@
       "outputs": [],
       "source": [
         "# loading the diabetes dataset to a pandas DataFrame\n",
-        "diabetes_dataset = pd.read_csv('/content/diabetes.csv')"
+        "diabetes_dataset = pd.read_csv('C:\\Shashank\\Machine_Learning\\diabetes_pred\\diabetes.csv')"
       ]
     },
     {
